tests/ui/resolve/unused-qualifications-suggestion.stderr
error: unnecessary qualification
  --> $DIR/unused-qualifications-suggestion.rs:17:5
   |
LL |     foo::bar();
   |     ^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/unused-qualifications-suggestion.rs:3:9
   |
LL | #![deny(unused_qualifications)]
   |         ^^^^^^^^^^^^^^^^^^^^^
help: remove the unnecessary path segments
   |
LL -     foo::bar();
LL +     bar();
   |

error: unnecessary qualification
  --> $DIR/unused-qualifications-suggestion.rs:21:5
   |
LL |     baz::qux::quux();
   |     ^^^^^^^^^^^^^^
   |
help: remove the unnecessary path segments
   |
LL -     baz::qux::quux();
LL +     quux();
   |

error: aborting due to 2 previous errors

